tests/scan/fixtures/validation/negative/clean_go_clean-webserver/clean-webserver.go
// Package clean-webserver is a clean Go module.
package clean-webserver

func Hello() string { return "hello" }
